compiler.old/tests/compiler/must_fail/t_01.rs.exp.err
tests/compiler/must_fail/t_01.rs:1:16: 1:19 error: declared function cannot have pub modifier
decl! { pub fn test(); }
               ^^^^
