compiler.old/tests/compiler/must_fail/t_01.rs
decl! { pub fn test(); }

/*
START:CMD
ARG="print[input]"
END:CMD
*/
